Solved all tasks