@@ -1,12 +1,8 @@
 package tasks;
 
 import common.Person;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -21,67 +17,47 @@ P.P.S Здесь ваши правки желательно прокоммент
  */
 public class Task8 {
 
-  private long count;
-
-  //Не хотим выдывать апи нашу фальшивую персону, поэтому конвертим начиная со второй
+  //Можно удалить if, но в таком случае возвращаемый пустой список будет изменяемым, поэтому на всякий случай оставил
+  //Использовал toList() как более простой вариант создания списка
+  //Изменил условие if на более понятное
   public List<String> getNames(List<Person> persons) {
-    if (persons.size() == 0) {
+    if (persons.isEmpty()) {
       return Collections.emptyList();
     }
-    persons.remove(0);
-    return persons.stream().map(Person::getFirstName).collect(Collectors.toList());
+    return persons.stream().skip(1).map(Person::getFirstName).toList();
   }
 
-  //ну и различные имена тоже хочется
+  //используем православный способ преобразования листа к сету
   public Set<String> getDifferentNames(List<Person> persons) {
-    return getNames(persons).stream().distinct().collect(Collectors.toSet());
+    return new HashSet<>(getNames(persons));
   }
 
-  //Для фронтов выдадим полное имя, а то сами не могут
+  //Исправил опечатку, из-за которой в результате не было отчества
+  //Не понятно в каком порядке выводить, поэтому вывожу ФИО
+  //Избавился от повторяющегося кода с помощью Stream API
   public String convertPersonToString(Person person) {
-    String result = "";
-    if (person.getSecondName() != null) {
-      result += person.getSecondName();
-    }
-
-    if (person.getFirstName() != null) {
-      result += " " + person.getFirstName();
-    }
-
-    if (person.getSecondName() != null) {
-      result += " " + person.getSecondName();
-    }
-    return result;
+    return Stream.of(person.getSecondName(), person.getFirstName(), person.getMiddleName())
+        .filter(Objects::nonNull)
+        .collect(Collectors.joining(" "));
   }
 
-  // словарь id персоны -> ее имя
+  //Уменьшил размер и повысил читаемость кода с помощью Stream API
   public Map<Integer, String> getPersonNames(Collection<Person> persons) {
-    Map<Integer, String> map = new HashMap<>(1);
-    for (Person person : persons) {
-      if (!map.containsKey(person.getId())) {
-        map.put(person.getId(), convertPersonToString(person));
-      }
-    }
-    return map;
+    return persons.stream().collect(Collectors.toMap(
+        Person::getId,
+        this::convertPersonToString,
+        (a, b) -> a)
+    );
   }
 
-  // есть ли совпадающие в двух коллекциях персоны?
+  //Уменьшил время работы с O(n * m) до O(n + m)
+  //Использовал StreamAPI для сокращения количества кода
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-        }
-      }
-    }
-    return has;
+    return persons2.stream().anyMatch((new HashSet<>(persons1))::contains);
   }
 
-  //...
+  //Не понятно зачем использовать переменную объекта класса для count. Так как она приватная и нет геттеров убрал её
   public long countEven(Stream<Integer> numbers) {
-    count = 0;
-    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
-    return count;
+    return numbers.filter(num -> num % 2 == 0).count();
   }
 }
